--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Yet another dependency injection container for PHP",
   "type": "library",
   "license": "MIT",
+  "keywords": ["php", "dependency-injection", "autowiring", "repository", "container", "service-container"],
   "autoload": {
     "psr-4": {
       "Webdevcave\\Yadic\\": "src/"
