--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "phpunit/phpunit": "^10"
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit ./tests"
+    "test": "XDEBUG_MODE=coverage ./vendor/bin/phpunit"
   },
   "scripts-descriptions": {
     "test": "Run PHPUNIT tests"
