--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "webdevcave/simple-cache": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10"
+    "phpunit/phpunit": "^10",
+    "rregeer/phpunit-coverage-check": "^0.3.1"
   },
   "scripts": {
     "test": "XDEBUG_MODE=coverage ./vendor/bin/phpunit"
