updating build workflow

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,7 +2,7 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/build-coverage-check" ]
   pull_request:
     branches: [ "main" ]
 
@@ -36,4 +36,5 @@ jobs:
       # Docs: https://getcomposer.org/doc/articles/scripts.md
 
       - name: Run test suite
-        run: composer run-script test
+        run: composer run-script test && \
+             ./vendor/bin/coverage-check clover.xml 80 --only-percentage
