--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,7 +2,7 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ "main", "feature/build-coverage-check" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
