--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,3 +38,8 @@ jobs:
       - name: Run test suite
         run: composer run-script test && composer run-script check-coverage
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./build/coverage-clover.xml
