generate txt report

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -42,4 +42,4 @@ jobs:
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./build/coverage-clover.xml
+          file: ./build/coverage-clover.txt
